--- a/package.json
+++ b/package.json
@@ -3,44 +3,53 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "clean": "del-cli \"src/app/**/*.js\" \"src/app/**/*.js.map\" \"src/devDist\" \"src/dist\"",
+    "build": "npm run clean && webpack --progress --watch",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
+    "@angular/upgrade": "4.0.0",
+    "@angular/platform-server": "4.0.0",
+    "@angular/tsc-wrapped": "4.0.0",
+    "@angular/animations": "4.0.0",
+    "systemjs": "0.19.47",
+    "core-js": "2.4.1",
+    "rxjs": "5.2.0",
+    "zone.js": "0.8.5",
+    "express": "4.15.2",
+    "body-parser": "1.17.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "@types/node": "7.0.11",
+    "@types/google-maps": "3.2.0",
+    "concurrently": "3.4.0",
+    "lite-server": "2.3.0",
+    "typescript": "2.2.2",
+    "opn": "4.0.2",
+    "del-cli": "0.2.1",
+    "webpack": "2.3.2",
+    "html-webpack-plugin": "2.28.0",
+    "webpack-merge": "4.1.0",
+    "extract-text-webpack-plugin": "2.1.0",
+    "angular2-template-loader": "0.6.2",
+    "angular-router-loader": "0.5.0",
+    "awesome-typescript-loader": "3.1.2",
+    "css-loader": "0.27.3",
+    "to-string-loader": "1.1.5",
+    "raw-loader": "0.5.1",
+    "style-loader": "0.16.0",
+    "@ngtools/webpack": "1.3.0"
   }
 }
