--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/*.map": {
             "when": "$(basename).map"
         },
-        "**/node_modules": true
+        "**/node_modules": true,
+        "**/dist": true
     }
 }
